--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 /* =======================================================
 *
 * 	Template Style 
+*       Page CSS
 *
 * ======================================================= */
 body {
